@@ -58,8 +58,10 @@ Task* Task::factory( const string& t ){
   else if( type == "cmp" ) return new CMP;
   else if( type == "zoomify" ) return new Zoomify;
   else if( type == "spectra" ) return new SPECTRA;
+  else if( type == "pfl" ) return new PFL;
   else if( type == "lyr" ) return new LYR;
   else if( type == "deepzoom" ) return new DeepZoom;
+  else if( type == "iiif" ) return new IIIF;
   else return NULL;
 
 }
